--- a/src/assets/css/signup/register.css
+++ b/src/assets/css/signup/register.css
@@ -1,33 +1,26 @@
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    text-align: center;
-}
-
-body{
-    width: 1920px;
-    height: 1080px;
-    background-image: url('/src/assets/image/loginPage.png');
+.bodyy{
+    background-image: url('/src/assets/image/signUp/loginPage.png');
     background-repeat: no-repeat;
+    background-size: cover; /* 배경 이미지가 요소를 완전히 채우도록 설정 */
+    background-position: center; /* 배경 이미지의 위치를 가운데로 조정 */
+    height: 100vh; /* 화면의 높이에 따라 요소의 높이를 조정 */
+    display: flex;
 }
 
 .window{
-    width: 500px;
-    height: 862px;
+    width: 50vh;
+    height: 70vh;
     background-color: #ffffff;
-    margin: 109px auto ;
     border-radius: 16px;
     text-align: center;
-    padding: 50px 0;
+    padding: 7vh 0;
+    margin: auto ;
 }
 
 #logo{
-    width: 248px;
-    height: 89px;
-    margin-bottom: 10px;
+    width: 33vh;
+    height: 11vh;
 }
 
 #info{
@@ -39,35 +32,11 @@ body{
 
 .login{
     display: block;
-    margin-top: 40px;
+    margin-top: 4vh;
 }
 
 .btn{
-    margin-top: 60px;
-}
-
-button{
-    width: 460px;
-    height: 58px;
-    border-radius: 12px;
-    padding: 10px 15px;
-    margin: 0px auto;
-}
-
-#sign-up{
-    background-color: #4B65F6;
-    color: #ffffff;
-    margin-bottom: 10px;
-    border: none;
-    font-size: 16px;
-    font-family: 'Pretendard';
-    font-weight: 600;
-
-    margin-bottom: 16px;
-}
-
-#sign-up:hover{
-    background-color: #98A7FA;
+    margin-top: 3vh;
 }
 
 #id-icon,
@@ -76,12 +45,12 @@ button{
 #tel-icon{
     display: flex;
     align-items: center;
-    width: 460px;
-    height: 58px;
+    width: 40vh;
+    height: 2vh;
     border-radius: 12px;
     border: 1.5px solid #CBD5FF;
     padding: 10px 15px;
-    margin: 16px auto;
+    margin: 2vh auto;
 }
 
 #id-icon input,
@@ -91,7 +60,7 @@ button{
     border: none;
     width: 100%;
     text-align: left;
-    margin-left: 8px;
+    margin-left: 1vh;
     outline: none;
     font-size: 16px;
     color: #A1A1A1;
@@ -104,12 +73,12 @@ button{
 #pass-icon-check{
     display: flex;
     align-items: center;
-    width: 460px;
-    height: 58px;
+    width: 40vh;
+    height: 2vh;
     border-radius: 12px;
     border: 1.5px solid #CBD5FF;
     padding: 10px 15px;
-    margin: 16px auto;
+    margin: 2vh auto;
 }
 
 #pass-icon input,
@@ -117,7 +86,7 @@ button{
     border: none;
     width: 100%;
     text-align: left;
-    margin-left: 8px;
+    margin-left: 1vh;
     outline: none;
     font-size: 16px;
     color: #A1A1A1;
@@ -126,27 +95,34 @@ button{
     font-weight: 400;
 }
 
-#pass-icon i,
-#pass-icon-check i{
-    width: 24px;
-    height:24px;
-    color: #A1A1A1;
-
-    line-height: 24px;
-    align-items: center;
-}
-
-p{
+.window p{
     font-size: 16px;
     font-family: 'Pretendard';
     font-weight: 400;
     color: #999;
 }
 
-a{
+.window a{
     font-size: 16px;
     font-family: 'Pretendard';
     font-weight: 500;
     margin-left: 10px;
     color: #4B65F6;
+}
+
+.btn button{
+    width: 44vh;
+    height: 5vh;
+    border-radius: 12px;
+    padding: 10px 15px;
+    margin: 0.5vh auto;
+}
+
+#sign-up{
+    background-color: #4B65F6;
+    color: #ffffff;
+    border: none;
+    font-size: 16px;
+    font-family: 'Pretendard';
+    font-weight: 600;
 }
