--- a/src/assets/css/mypage.css
+++ b/src/assets/css/mypage.css
@@ -1,4 +1,3 @@
-/*@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');*/
 
 *{
     font-family: 'pretendard';
@@ -7,7 +6,7 @@
 }
 
 /* 사이드메뉴 */
-.sidemenu{
+.mypage-sidemenu{
     width: 35vh;
     height: 100vh;
     position: fixed;
@@ -15,24 +14,24 @@
     background-color: #F9FAFD;
     border-right: 1px solid rgba(126, 150, 255, 0.16);
 }
-#logo{
+#mypage-logo{
     width: 20vh;
     height: 8vh;
     margin: 3vh auto;
 }
 /* 로고 */
-#logo img{
+#mypage-logo img{
     width: 100%;
     height: 100%;
     margin: auto;
 }
 
 /* 메뉴리스트 */
-.menu{
+.mypage-menu{
     width: 35vh;
 }
 
-#menuList{
+#mypage-menuList{
     height: 6vh;
     width: 30vh;
     color: #737373;
@@ -50,20 +49,20 @@
     color: #000000;
 }
 
-.menu li .menuList{
+.mypage-menu li .menuList{
     text-decoration: none;
     display: flex;
     align-items: center;
     color: #737373;
 }
 
-#menuList img{
+#mypage-menuList img{
     width: 24px;
     height: 24px;
     margin-right: 20px;
 }
 
-#menuList:hover{
+#mypage-menuList:hover{
     background-color: #DBE2FD;
     cursor: pointer;
 }
@@ -77,7 +76,7 @@
 
 
 
-.account{
+.mypage-account{
     position: absolute;
     bottom: 5vh;
     left: 5vh;
@@ -87,17 +86,17 @@
     margin: 0 auto;
 }
 
-.account img{
+.mypage-account img{
     margin-right: 2vh;
 }
 
-.account p{
+.mypage-account p{
     font-size: 14px;
     font-weight: 400;
     margin: 0;
 }
 
-.account h2 {
+.mypage-account h2 {
     font-size: 16px;
     font-weight: 600;
     margin: 0;
@@ -118,21 +117,21 @@
 
 
 /* 오른쪽 콘텐츠 */
-.wrap{
+.mypage-wrap{
     width: 150vh;
     margin-left: 40vh;
     display: flex;
     flex-direction: column;
 }
 
-.mypage{
+.mypage-mypage{
     font-size: 24px;
     font-weight: 600;
     margin: 3vh 0;
 
 }
 
-.contentBox{
+.mypage-contentBox{
     width: 100%;
     height: 65vh;
     border-radius: 24px;
@@ -143,7 +142,7 @@
     padding: 5vh 7vh;
 }
 
-.profile{
+.mypage-profile{
     width: 100%;
     display: flex;
     justify-content: left;
@@ -151,14 +150,14 @@
     margin-bottom: 40px;
 }
 
-.name{
+.mypage-name{
     font-size: 24px;
     font-weight: 700;
     color:#333;
     margin-left: 12px;
 }
 
-.innerBox2{
+.mypage-innerBox2{
     width: 145vh;
     height: 2vh;
     background-color: #F9FAFD;
@@ -169,7 +168,7 @@
     margin-bottom: -1px;
 }
 
-.innerBox3{
+.mypage-innerBox3{
     width: 145vh;
     height: 2vh;
     background-color: #F9FAFD;
@@ -179,7 +178,7 @@
     margin-bottom: -1px;
 }
 
-.innerBox4{
+.mypage-innerBox4{
     width: 145vh;
     height: 2vh;
     background-color: #F9FAFD;
@@ -190,7 +189,7 @@
     padding-bottom: 30px;
 }
 
-.info-wrap1{
+.mypage-info-wrap1{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -198,7 +197,7 @@
     width: 644px;
 }
 
-.info-wrap2{
+.mypage-info-wrap2{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -206,7 +205,7 @@
     width: 640px;
 }
 
-.infomation1{
+.mypage-infomation1{
     display: flex;
     justify-content: left;
     align-items: center;
@@ -214,7 +213,7 @@
     width: 470px;
 }
 
-.infomation2{
+.mypage-infomation2{
     display: flex;
     justify-content: left;
     align-items: center;
@@ -222,7 +221,7 @@
     width: 940px;
 }
 
-.rightCont{
+.mypage-rightCont{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -230,7 +229,7 @@
     width: 194px;
 }
 
-.rightCont2{
+.mypage-rightCont2{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -238,7 +237,7 @@
     width: 190px;
 }
 
-.line{
+.mypage-line{
     width: 0.8px;
     height: 78px;
     background-color: rgba(126, 150, 255, 0.3);
@@ -246,7 +245,7 @@
     margin-right: 20px;
 }
 
-.bold{
+.mypage-bold{
     font-size: 16px;
     font-weight: 600;
     color: #333;
@@ -254,42 +253,42 @@
     margin-right: 37px;
 }
 
-.bold2{
+.mypage-bold2{
     font-size: 16px;
     font-weight: 600;
     margin-right: 23px;
     color: #333;
 }
 
-.bold3{
+.mypage-bold3{
     font-size: 16px;
     font-weight: 600;
     margin-right: 19px;
     color: #333;
 }
 
-.bold4{
+.mypage-bold4{
     font-size: 16px;
     font-weight: 600;
     margin-right: 51px;
     color: #333;
 }
 
-.regular{
+.mypage-regular{
     font-size: 16px;
     font-weight: 400;
     color: #444;
 }
 
 /* 버튼 */
-.btn{
+.mypage-btn{
     width: 10vh;
     height: 5.5vh;
     margin-left: auto;
     margin-bottom: -1vh;
 }
 
-.btn button{
+.mypage-btn button{
     width: 10vh;
     height: 5.5vh;
 
@@ -303,7 +302,7 @@
     margin: 0;
 }
 
-.btn button:hover{
+.mypage-btn button:hover{
     background-color: #98A7FA;
     cursor: pointer;
 }
