--- a/src/assets/css/mypage.css
+++ b/src/assets/css/mypage.css
@@ -1,4 +1,5 @@
 
+
 *{
     font-family: 'pretendard';
     text-decoration: none;
@@ -118,7 +119,7 @@
 
 /* 오른쪽 콘텐츠 */
 .mypage-wrap{
-    width: 150vh;
+    width: 90vh;
     margin-left: 40vh;
     display: flex;
     flex-direction: column;
@@ -133,13 +134,14 @@
 
 .mypage-contentBox{
     width: 100%;
-    height: 65vh;
+    height: 100vh;
     border-radius: 24px;
     background-color: #fff;
     border: 1px solid rgba(126, 150, 255, 0.16);
     box-shadow: 0px 0px 20px rgba(126, 150, 255, 0.16);
 
     padding: 5vh 7vh;
+    margin: 0 0 5vh 0;
 }
 
 .mypage-profile{
@@ -158,7 +160,7 @@
 }
 
 .mypage-innerBox2{
-    width: 145vh;
+    width: 85vh;
     height: 2vh;
     background-color: #F9FAFD;
     border: 1px solid rgba(126, 150, 255, 0.3);
@@ -169,7 +171,7 @@
 }
 
 .mypage-innerBox3{
-    width: 145vh;
+    width: 85vh;
     height: 2vh;
     background-color: #F9FAFD;
     border: 1px solid rgba(126, 150, 255, 0.3);
@@ -179,7 +181,7 @@
 }
 
 .mypage-innerBox4{
-    width: 145vh;
+    width: 85vh;
     height: 2vh;
     background-color: #F9FAFD;
     border: 1px solid rgba(126, 150, 255, 0.3);
@@ -187,30 +189,7 @@
 
     padding: 3vh 2vh;
     padding-bottom: 30px;
-}
-
-.mypage-info-wrap1{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 644px;
-}
-
-.mypage-info-wrap2{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 640px;
-}
-
-.mypage-infomation1{
-    display: flex;
-    justify-content: left;
-    align-items: center;
-
-    width: 470px;
+    margin-bottom: 20px;
 }
 
 .mypage-infomation2{
@@ -218,66 +197,26 @@
     justify-content: left;
     align-items: center;
 
-    width: 940px;
+    width: 130vh;
 }
 
-.mypage-rightCont{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.mypage-infomation2 input{
+    border: none;
+    width: 50%;
+    text-align: left;
+    outline: none;
+    font-size: 16px;
+    background-color: #F9FAFD;
 
-    width: 194px;
-}
-
-.mypage-rightCont2{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 190px;
-}
-
-.mypage-line{
-    width: 0.8px;
-    height: 78px;
-    background-color: rgba(126, 150, 255, 0.3);
-
-    margin-right: 20px;
+    font-family: 'Pretendard';
+    font-weight: 400;
 }
 
 .mypage-bold{
+    width: 130px;
     font-size: 16px;
     font-weight: 600;
     color: #333;
-
-    margin-right: 37px;
-}
-
-.mypage-bold2{
-    font-size: 16px;
-    font-weight: 600;
-    margin-right: 23px;
-    color: #333;
-}
-
-.mypage-bold3{
-    font-size: 16px;
-    font-weight: 600;
-    margin-right: 19px;
-    color: #333;
-}
-
-.mypage-bold4{
-    font-size: 16px;
-    font-weight: 600;
-    margin-right: 51px;
-    color: #333;
-}
-
-.mypage-regular{
-    font-size: 16px;
-    font-weight: 400;
-    color: #444;
 }
 
 /* 버튼 */
@@ -285,7 +224,7 @@
     width: 10vh;
     height: 5.5vh;
     margin-left: auto;
-    margin-bottom: -1vh;
+    margin-right: 1vh;
 }
 
 .mypage-btn button{
@@ -293,16 +232,23 @@
     height: 5.5vh;
 
     background-color: #4B65F6;
+    border-radius: 5px;
     border: none;
     color:white;
     font-size: 2vh;
     font-weight: 700;
     text-align: center;
 
-    margin: 0;
+    margin: 4vh 1vh 0 0;
 }
 
 .mypage-btn button:hover{
     background-color: #98A7FA;
     cursor: pointer;
+}
+
+.readonly-input {
+    background-color: #f2f2f2;
+    color: #666;
+    pointer-events: none;
 }
