--- a/src/assets/css/signup.css
+++ b/src/assets/css/signup.css
@@ -1,23 +1,24 @@
-
 .signup-body{
     background-image: url('/src/assets/image/signUp/loginPage.png');
-    background-repeat: no-repeat;
     background-size: cover; /* 배경 이미지가 요소를 완전히 채우도록 설정 */
     background-position: center; /* 배경 이미지의 위치를 가운데로 조정 */
-    height: 100vh; /* 화면의 높이에 따라 요소의 높이를 조정 */
     display: flex;
+    background-attachment: fixed;
 }
 
 .signup-window{
     width: 50vh;
-    height: 70vh;
+    height: 100vh;
     background-color: #ffffff;
     border-radius: 16px;
     text-align: center;
     padding: 7vh 0;
-    margin: auto ;
+    margin: 5vh auto ;
 }
 
+#error-message {
+    color: red;
+}
 #signup-logo{
     width: 33vh;
     height: 11vh;
@@ -39,10 +40,7 @@
     margin-top: 3vh;
 }
 
-#signup-id-icon,
-#signup-name1-icon,
-#signup-name2-icon,
-#signup-tel-icon{
+#signup-icon{
     display: flex;
     align-items: center;
     width: 40vh;
@@ -53,10 +51,7 @@
     margin: 2vh auto;
 }
 
-#signup-id-icon input,
-#signup-name1-icon input,
-#signup-name2-icon input,
-#signup-tel-icon input{
+#signup-icon input{
     border: none;
     width: 100%;
     text-align: left;
