--- a/src/assets/css/mypage.css
+++ b/src/assets/css/mypage.css
@@ -8,17 +8,17 @@
 
 /* 사이드메뉴 */
 .mypage-sidemenu{
-    width: 35vh;
-    height: 100vh;
+    width: 270px;
+    height: 100%;
     position: fixed;
     left: 0;
     background-color: #F9FAFD;
     border-right: 1px solid rgba(126, 150, 255, 0.16);
 }
 #mypage-logo{
-    width: 20vh;
-    height: 8vh;
-    margin: 3vh auto;
+    width: 150px;
+    height: 60px;
+    margin: 20px auto;
 }
 /* 로고 */
 #mypage-logo img{
@@ -29,12 +29,12 @@
 
 /* 메뉴리스트 */
 .mypage-menu{
-    width: 35vh;
+    width: 270px;
 }
 
 #mypage-menuList{
-    height: 6vh;
-    width: 30vh;
+    height: 50px;
+    width: 220px;
     color: #737373;
     font-size: 20px;
     font-style: normal;
@@ -44,7 +44,7 @@
     border-radius: 4px;
     border: none;
     display: block;
-    margin: 1vh 3vh;
+    margin: 8px 25px;
 
     background-color: #F9FAFD;
     color: #000000;
@@ -79,16 +79,16 @@
 
 .mypage-account{
     position: absolute;
-    bottom: 5vh;
-    left: 5vh;
+    bottom: 30px;
+    left: 60px;
     display: flex;
-    width: 25vh;
-    height: 6vh;
+    width: 250px;
+    height: 40px;
     margin: 0 auto;
 }
 
 .mypage-account img{
-    margin-right: 2vh;
+    margin-right: 20px;
 }
 
 .mypage-account p{
@@ -119,8 +119,8 @@
 
 /* 오른쪽 콘텐츠 */
 .mypage-wrap{
-    width: 90vh;
-    margin-left: 40vh;
+    width: 660px;
+    margin-left: 300px;
     display: flex;
     flex-direction: column;
 }
@@ -128,20 +128,19 @@
 .mypage-mypage{
     font-size: 24px;
     font-weight: 600;
-    margin: 3vh 0;
-
+    margin: 30px 0;
 }
 
 .mypage-contentBox{
     width: 100%;
-    height: 100vh;
+    height: 710px;
     border-radius: 24px;
     background-color: #fff;
     border: 1px solid rgba(126, 150, 255, 0.16);
     box-shadow: 0px 0px 20px rgba(126, 150, 255, 0.16);
 
-    padding: 5vh 7vh;
-    margin: 0 0 5vh 0;
+    padding: 40px 40px 20px 40px;
+    margin: 0 0 50px 0;
 }
 
 .mypage-profile{
@@ -160,34 +159,34 @@
 }
 
 .mypage-innerBox2{
-    width: 85vh;
-    height: 2vh;
+    width: 630px;
+    height: 18px;
     background-color: #F9FAFD;
     border: 1px solid rgba(126, 150, 255, 0.3);
     border-radius: 16px 16px 0px 0px;
 
-    padding: 3vh 2vh;
+    padding: 20px 15px;
     margin-bottom: -1px;
 }
 
 .mypage-innerBox3{
-    width: 85vh;
-    height: 2vh;
+    width: 630px;
+    height: 18px;
     background-color: #F9FAFD;
     border: 1px solid rgba(126, 150, 255, 0.3);
 
-    padding: 3vh 2vh;
+    padding: 20px 15px;
     margin-bottom: -1px;
 }
 
 .mypage-innerBox4{
-    width: 85vh;
-    height: 2vh;
+    width: 630px;
+    height: 18px;
     background-color: #F9FAFD;
     border: 1px solid rgba(126, 150, 255, 0.3);
     border-radius: 0px 0px 16px 16px;
 
-    padding: 3vh 2vh;
+    padding: 20px 15px;
     padding-bottom: 30px;
     margin-bottom: 20px;
 }
@@ -197,12 +196,12 @@
     justify-content: left;
     align-items: center;
 
-    width: 130vh;
+    width: 600px;
 }
 
 .mypage-infomation2 input{
     border: none;
-    width: 50%;
+    width: 78%;
     text-align: left;
     outline: none;
     font-size: 16px;
@@ -221,34 +220,27 @@
 
 /* 버튼 */
 .mypage-btn{
-    width: 10vh;
-    height: 5.5vh;
+    width: 30px;
+    height: 50px;
     margin-left: auto;
-    margin-right: 1vh;
+    margin-right: 40px;
 }
 
 .mypage-btn button{
-    width: 10vh;
-    height: 5.5vh;
+    width: 70px;
+    height: 40px;
 
     background-color: #4B65F6;
     border-radius: 5px;
     border: none;
     color:white;
-    font-size: 2vh;
+    font-size: 16px;
     font-weight: 700;
     text-align: center;
 
-    margin: 4vh 1vh 0 0;
 }
 
 .mypage-btn button:hover{
     background-color: #98A7FA;
     cursor: pointer;
-}
-
-.readonly-input {
-    background-color: #f2f2f2;
-    color: #666;
-    pointer-events: none;
 }
