--- a/src/assets/css/signup.css
+++ b/src/assets/css/signup.css
@@ -1,5 +1,6 @@
+
 .signup-body{
-    background-image: url('/src/assets/image/signUp/loginPage.png');
+    background-image: url('../image/signUp/loginPage.png');
     background-size: cover; /* 배경 이미지가 요소를 완전히 채우도록 설정 */
     background-position: center; /* 배경 이미지의 위치를 가운데로 조정 */
     display: flex;
@@ -7,21 +8,18 @@
 }
 
 .signup-window{
-    width: 50vh;
-    height: 100vh;
+    width: 360px;
+    height: 800px;
     background-color: #ffffff;
     border-radius: 16px;
     text-align: center;
-    padding: 7vh 0;
-    margin: 5vh auto ;
+    padding: 60px 20px 80px 20px;
+    margin: 50px auto ;
 }
 
-#error-message {
-    color: red;
-}
 #signup-logo{
-    width: 33vh;
-    height: 11vh;
+    width: 230px;
+    height: 80px;
 }
 
 #signup-info{
@@ -33,29 +31,29 @@
 
 .signup-login{
     display: block;
-    margin-top: 4vh;
+    margin-top: 30px;
 }
 
 .signup-btn{
-    margin-top: 3vh;
+    margin-top: 30px;
 }
 
 #signup-icon{
     display: flex;
     align-items: center;
-    width: 40vh;
-    height: 2vh;
+    width: 300px;
+    height: 26px;
     border-radius: 12px;
     border: 1.5px solid #CBD5FF;
     padding: 10px 15px;
-    margin: 2vh auto;
+    margin: 10px auto;
 }
 
 #signup-icon input{
     border: none;
     width: 100%;
     text-align: left;
-    margin-left: 1vh;
+    margin-left: 10px;
     outline: none;
     font-size: 16px;
     color: #A1A1A1;
@@ -68,12 +66,12 @@
 #signup-pass-icon-check{
     display: flex;
     align-items: center;
-    width: 40vh;
-    height: 2vh;
+    width: 300px;
+    height: 26px;
     border-radius: 12px;
     border: 1.5px solid #CBD5FF;
     padding: 10px 15px;
-    margin: 2vh auto;
+    margin: 16px auto;
 }
 
 #signup-pass-icon input,
@@ -81,7 +79,7 @@
     border: none;
     width: 100%;
     text-align: left;
-    margin-left: 1vh;
+    margin-left: 10px;
     outline: none;
     font-size: 16px;
     color: #A1A1A1;
@@ -106,11 +104,11 @@
 }
 
 .signup-btn button{
-    width: 44vh;
-    height: 5vh;
+    width: 330px;
+    height: 40px;
     border-radius: 12px;
     padding: 10px 15px;
-    margin: 0.5vh auto;
+    margin: 5px auto;
 }
 
 #signup-sign-up{
