--- a/src/assets/css/result.css
+++ b/src/assets/css/result.css
@@ -1,7 +1,7 @@
 
 /* 메인컨텐츠 */
 .total-main{
-    width: 1230px;
+    width: 1500px;
     margin-left: 300px;
     display: flex;
     flex-direction: column;
@@ -184,7 +184,7 @@
 
 .total-contents{
     display: block;
-    width: 1200px;
+    width: 1400px;
     height: auto;
     border-radius: 24px;
     border: 1px solid var(--stroke, rgba(126, 150, 255, 0.16));
@@ -243,7 +243,7 @@
 .total-detail{
     display: flex;
     width: 100%;
-    margin: 10px 0 0 0;
+    margin: 10px 0 0 auto;
 }
 
 .total-detail a{
