--- a/src/assets/css/test.css
+++ b/src/assets/css/test.css
@@ -25,6 +25,16 @@
     box-shadow: 0px 0px 16px 0px rgba(126, 150, 255, 0.20);
     margin: 0 0 50px 0;
 }
+.test-days2{
+     padding: 30px;
+     width: 1200px;
+     height: auto;
+     border-radius: 24px;
+     border: 1px solid var(--stroke, rgba(126, 150, 255, 0.16));
+     background: #FFF;
+     box-shadow: 0px 0px 16px 0px rgba(126, 150, 255, 0.20);
+     margin: 0 0 50px 0;
+ }
 .test-days .title{
     margin-bottom: 40px;
     font-size: 24px;
@@ -84,6 +94,16 @@
     justify-content: center;
     width: 100%;
     margin: auto;
+}
+
+.test-detail button{
+    background-color: #fff;
+    border: none;
+    font-size: 15px;
+    color: #4B65F4;
+}
+.test-detail button:hover{
+    cursor: pointer;
 }
 
 .test-search-container {
