--- a/src/assets/css/test.css
+++ b/src/assets/css/test.css
@@ -27,7 +27,7 @@
 }
 .test-days2{
      padding: 30px;
-     width: 1400px;
+     width: 1500px;
      height: auto;
      border-radius: 24px;
      border: 1px solid var(--stroke, rgba(126, 150, 255, 0.16));
@@ -257,7 +257,16 @@
 }
 
 .test-date{
-    width: 30%;
+    width: 25%;
+}
+.test-user{
+    width: 25%;
+}
+.test-content{
+    width: 25%;
+}
+.test-score{
+    width: 25%;
 }
 
 #bg1{
